--- a/ICT397GroupProject/ICT397GroupProject.vcxproj.filters
+++ b/ICT397GroupProject/ICT397GroupProject.vcxproj.filters
@@ -36,6 +36,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Test.lua" />
+    <None Include="fragment.shader" />
+    <None Include="vertex.shader" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Landscape.h">
