--- a/ICT397GroupProject/ICT397GroupProject.vcxproj.filters
+++ b/ICT397GroupProject/ICT397GroupProject.vcxproj.filters
@@ -38,6 +38,8 @@
     <None Include="Test.lua" />
     <None Include="fragment.shader" />
     <None Include="vertex.shader" />
+    <None Include="skyboxFragment.shader" />
+    <None Include="skyboxVertex.shader" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Landscape.h">
