Added improved boat model, fixed textures, tidied up rendering code a bit, removed old boat

--- a/ICT397GroupProject/ICT397GroupProject.vcxproj.filters
+++ b/ICT397GroupProject/ICT397GroupProject.vcxproj.filters
@@ -40,6 +40,8 @@
     <None Include="vertex.shader" />
     <None Include="skyboxFragment.shader" />
     <None Include="skyboxVertex.shader" />
+    <None Include="modelFragment.shader" />
+    <None Include="modelVertex.shader" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Landscape.h">
