--- a/ICT397GroupProject/ICT397GroupProject.vcxproj
+++ b/ICT397GroupProject/ICT397GroupProject.vcxproj
@@ -110,6 +110,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="fragment.shader" />
+    <None Include="modelFragment.shader" />
+    <None Include="modelVertex.shader" />
     <None Include="skyboxFragment.shader" />
     <None Include="skyboxVertex.shader" />
     <None Include="Test.lua" />
