Added ability to load in a heightmap

--- a/ICT397GroupProject/imgui.ini
+++ b/ICT397GroupProject/imgui.ini
@@ -24,7 +24,12 @@ Size=294,220
 Collapsed=0
 
 [Window][ObjectData]
-Pos=60,60
-Size=403,358
-Collapsed=1
+Pos=7,11
+Size=403,370
+Collapsed=0
+
+[Window][Control Centre]
+Pos=118,60
+Size=433,413
+Collapsed=0
 
