Adding model shaders, fixed skybox loading wrong

--- a/ICT397GroupProject/ICT397GroupProject.vcxproj.filters
+++ b/ICT397GroupProject/ICT397GroupProject.vcxproj.filters
@@ -69,6 +69,8 @@
     <None Include="skyboxVertex.shader" />
     <None Include="waterFragment.shader" />
     <None Include="waterVertex.shader" />
+    <None Include="modelFragment.shader" />
+    <None Include="modelVertex.shader" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Landscape.h">
