--- a/ICT397GroupProject/ICT397GroupProject.vcxproj
+++ b/ICT397GroupProject/ICT397GroupProject.vcxproj
@@ -117,6 +117,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="fragment.shader" />
+    <None Include="lightingFragment.shader" />
+    <None Include="lightingVertex.shader" />
     <None Include="modelFragment.shader" />
     <None Include="modelVertex.shader" />
     <None Include="skyboxFragment.shader" />
