Cleaned up and added rotation

--- a/ICT397GroupProject/ICT397GroupProject.vcxproj.filters
+++ b/ICT397GroupProject/ICT397GroupProject.vcxproj.filters
@@ -126,5 +126,8 @@
     <ClInclude Include="..\Externals\imgui\imgui_impl_opengl3_loader.h">
       <Filter>Header Files\imgui</Filter>
     </ClInclude>
+    <ClInclude Include="ImGuiData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
