Data finally loads properly, somehow things aren't rendering

--- a/ICT397GroupProject/ICT397GroupProject.vcxproj
+++ b/ICT397GroupProject/ICT397GroupProject.vcxproj
@@ -119,7 +119,38 @@
     <None Include="fragment.shader" />
     <None Include="lightingFragment.shader" />
     <None Include="lightingVertex.shader" />
-    <None Include="MapData.lua" />
+    <None Include="model0.lua" />
+    <None Include="model1.lua" />
+    <None Include="model10.lua" />
+    <None Include="model11.lua" />
+    <None Include="model12.lua" />
+    <None Include="model13.lua" />
+    <None Include="model14.lua" />
+    <None Include="model15.lua" />
+    <None Include="model16.lua" />
+    <None Include="model17.lua" />
+    <None Include="model18.lua" />
+    <None Include="model19.lua" />
+    <None Include="model2.lua" />
+    <None Include="model20.lua" />
+    <None Include="model21.lua" />
+    <None Include="model22.lua" />
+    <None Include="model23.lua" />
+    <None Include="model24.lua" />
+    <None Include="model25.lua" />
+    <None Include="model26.lua" />
+    <None Include="model27.lua" />
+    <None Include="model28.lua" />
+    <None Include="model29.lua" />
+    <None Include="model3.lua" />
+    <None Include="model30.lua" />
+    <None Include="model31.lua" />
+    <None Include="model4.lua" />
+    <None Include="model5.lua" />
+    <None Include="model6.lua" />
+    <None Include="model7.lua" />
+    <None Include="model8.lua" />
+    <None Include="model9.lua" />
     <None Include="modelFragment.shader" />
     <None Include="modelVertex.shader" />
     <None Include="skyboxFragment.shader" />
