--- a/ICT397GroupProject/ICT397GroupProject.vcxproj
+++ b/ICT397GroupProject/ICT397GroupProject.vcxproj
@@ -52,11 +52,11 @@
     <LibraryPath>$(SolutionDir)Build\Lua\$(Configuration);$(SolutionDir)Externals\GLEW\lib\Release\x64;$(SolutionDir)Externals\GLFW\lib-vc2022;$(SolutionDir)Externals\SOIL2\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <LinkIncremental>false</LinkIncremental>
+    <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)Build\$(ProjectName)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)Intermediate\$(ProjectName)\$(Configuration)\</IntDir>
-    <IncludePath>$(SolutionDir)Externals\lua;$(SolutionDir)Externals\;$(IncludePath);$(SolutionDir)Externals\ReactPhysics3D\include</IncludePath>
-    <LibraryPath>$(SolutionDir)Build\Lua\$(Configuration);$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)Externals\lua;$(SolutionDir)Externals\GLEW\include;$(SolutionDir)Externals\;$(SolutionDir)Externals\GLFW\include;$(SolutionDir)Externals\GLM\glm;$(SolutionDir)Externals\SOIL2\include;$(IncludePath);$(SolutionDir)Externals\ReactPhysics3D\include</IncludePath>
+    <LibraryPath>$(SolutionDir)Build\Lua\$(Configuration);$(SolutionDir)Externals\GLEW\lib\Release\x64;$(SolutionDir)Externals\GLFW\lib-vc2022;$(SolutionDir)Externals\SOIL2\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -89,14 +89,14 @@
       <ConformanceMode>false</ConformanceMode>
       <PrecompiledHeaderFile />
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)Externals\assimp\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Externals\assimp\include;imgui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Lua.lib;assimp-vc142-mtd.lib;reactphysics3d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Lua.lib;assimp-vc142-mtd.lib;reactphysics3d.lib;opengl32.lib;glfw3.lib;glew32.lib;soil2-debug.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)Externals\assimp\lib;$(SolutionDir)Externals\ReactPhysics3D\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
