Added border, made it fullscreen

--- a/ICT397GroupProject/ICT397GroupProject.vcxproj.filters
+++ b/ICT397GroupProject/ICT397GroupProject.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="OurCamera.cpp">
+    <ClCompile Include="Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Shader.cpp">
@@ -85,7 +85,7 @@
     <ClInclude Include="Landscape.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="OurCamera.h">
+    <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Shader.h">
