--- a/ICT397GroupProject/ICT397GroupProject.vcxproj
+++ b/ICT397GroupProject/ICT397GroupProject.vcxproj
@@ -110,7 +110,7 @@
     <ClCompile Include="..\Externals\imgui\imgui_widgets.cpp" />
     <ClCompile Include="Landscape.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="OurCamera.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Skybox.cpp" />
     <ClCompile Include="stb.cpp" />
@@ -146,7 +146,7 @@
     <ClInclude Include="LanEngine.h" />
     <ClInclude Include="mesh.h" />
     <ClInclude Include="model.h" />
-    <ClInclude Include="OurCamera.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Skybox.h" />
     <ClInclude Include="stb_image.h" />
