--- a/ICT397GroupProject/imgui.ini
+++ b/ICT397GroupProject/imgui.ini
@@ -29,7 +29,17 @@ Size=403,370
 Collapsed=0
 
 [Window][Control Centre]
-Pos=25,26
+Pos=1399,102
 Size=389,919
+Collapsed=1
+
+[Window][My First Tool]
+Pos=65,91
+Size=713,619
+Collapsed=0
+
+[Window][OpenGL Texture Text]
+Pos=-8,-8
+Size=1933,1089
 Collapsed=0
 
