--- a/ICT397GroupProject/imgui.ini
+++ b/ICT397GroupProject/imgui.ini
@@ -29,7 +29,7 @@ Size=403,370
 Collapsed=0
 
 [Window][Control Centre]
-Pos=1399,102
+Pos=1353,256
 Size=389,919
 Collapsed=1
 
@@ -40,6 +40,11 @@ Collapsed=0
 
 [Window][OpenGL Texture Text]
 Pos=-8,-8
-Size=1933,1089
+Size=2900,1816
+Collapsed=0
+
+[Window][Button]
+Pos=1340,800
+Size=2900,1816
 Collapsed=0
 
