--- a/ICT397GroupProject/ICT397GroupProject.vcxproj
+++ b/ICT397GroupProject/ICT397GroupProject.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="..\Externals\imgui\imstb_textedit.h" />
     <ClInclude Include="..\Externals\imgui\imstb_truetype.h" />
     <ClInclude Include="AI.h" />
+    <ClInclude Include="font_awesome.h" />
     <ClInclude Include="ImGuiData.h" />
     <ClInclude Include="Landscape.h" />
     <ClInclude Include="LanEngine.h" />
