Fixed the bug where player could edit the title remove the ui by clicking on the background

--- a/ICT397GroupProject/imgui.ini
+++ b/ICT397GroupProject/imgui.ini
@@ -48,3 +48,13 @@ Pos=1240,600
 Size=2900,1816
 Collapsed=0
 
+[Window][Title]
+Pos=1140,400
+Size=2900,1816
+Collapsed=0
+
+[Window][Buttons]
+Pos=1240,600
+Size=2900,1816
+Collapsed=0
+
