Added life system so getting back to centre island isn't as easy as jumping into water.

--- a/ICT397GroupProject/imgui.ini
+++ b/ICT397GroupProject/imgui.ini
@@ -44,8 +44,8 @@ Size=1933,1089
 Collapsed=0
 
 [Window][Button]
-Pos=1240,600
-Size=2900,1816
+Pos=693,360
+Size=1933,1089
 Collapsed=0
 
 [Window][Title]
@@ -55,6 +55,31 @@ Collapsed=0
 
 [Window][Buttons]
 Pos=693,360
+Size=1933,1089
+Collapsed=0
+
+[Window][HealthBar]
+Pos=0,0
+Size=1933,1089
+Collapsed=0
+
+[Window][Lives]
+Pos=0,50
+Size=1933,1089
+Collapsed=0
+
+[Window][background]
+Pos=-8,-8
+Size=1933,1089
+Collapsed=0
+
+[Window][GameOverBackground]
+Pos=-8,-8
+Size=1933,1089
+Collapsed=0
+
+[Window][GameOverTitle]
+Pos=576,108
 Size=1933,1089
 Collapsed=0
 
