--- a/ICT397GroupProject/imgui.ini
+++ b/ICT397GroupProject/imgui.ini
@@ -83,3 +83,18 @@ Pos=576,108
 Size=1933,1089
 Collapsed=0
 
+[Window][Collectables]
+Pos=0,100
+Size=1933,1089
+Collapsed=0
+
+[Window][GameWinBackground]
+Pos=-8,-8
+Size=1933,1089
+Collapsed=0
+
+[Window][GameWinTitle]
+Pos=576,108
+Size=1933,1089
+Collapsed=0
+
